<resources>
    <string name="app_name">ProyectoPSP9</string>
    <string name="title_activity_timer_log">TimerLog</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_defect_log">DefectLog</string>
    <string name="title_activity_proyect_plan_summary">ProyectPlanSummary</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingreseelnombredelproyecto">Ingrese el nombre del proyecto</string>
    <string name="ingreseeltiempodelproyectoenminutos">Ingrese el tiempo del proyecto en minutos</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="guardar">Guardar</string>
    <string name="deseasguardar">¿Desea guardar esta información?</string>
    <string name="deseaseditar">¿Desea editar esta información?</string>
</resources>
